<resources>
    <string name="app_name">VangtiChai</string>

    <!-- Amount display -->
    <string name="taka_label">Taka:</string>
    <string name="taka_amount">Taka: %1$s</string>

    <!-- One row of the change table, e.g. "500: 13" -->
    <string name="note_row">%1$d: %2$d</string>

    <!-- Keypad labels -->
    <string name="clear">CLEAR</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
</resources>
